--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 /* === MAIN CONTENT ===*/
 
 * {
@@ -11,6 +12,48 @@ font-size: 1.25em;
 
 }
 
+/* === Navigation === */
+
+.nav-bar {
+    text-align: center;
+    align-items: center;
+    
+}
+    
+
+
+.nav a {
+    display: block;
+    text-decoration: none;
+    color: black;
+    font-size: 1.2em;
+    font-weight: 300;
+    text-align: center;
+    padding: .5em;
+        
+}
+    
+.nav  a:hover {
+    color: pink
+    
+}
+    
+ul {
+    list-style: none;
+
+}
+    
+    
+li {
+    
+    text-align: center;
+    background-color: white;
+    
+}
+    
+/*==Body Content==*/
+
+
 img {
 margin: 0 auto;
 max-width: 90%;
@@ -18,9 +61,11 @@ max-width: 90%;
 }
 
 body {
+display: flex;
+flex-direction: column;
 text-align: center;
 min-height: 100vh;
-background-color: azure;
+background-color:whitesmoke;
 font-family: 'Raleway', sans-serif;
 
 }
@@ -40,10 +85,8 @@ margin: 0%;
 
 }
 
-h4{
-text-align: left;
 
-}
+
 
 p {
 font-size: 1em;
@@ -53,127 +96,89 @@ text-align: center;
 
 }
 
-ul,
-li {
-list-style: none;
-padding: 5px;
-padding-left: 0%;
-text-align: center;
 
-}
 
 h2,
 h3 {
-color: #093a58
-
-}
-
-/* font-family: 'Raleway', sans-serif; */
-
-/* === Navigation === */
-
-.header {
-text-align: center;
-
-}
-
-.my-name {
-font-size: 1.35em;
-margin: 0;
-
-}
-
-.nav-bar {
-text-align: center;
-display: block;
-padding: 10px 15px;
-color: black;
-
-
-}
-
-.nav-bar  a:hover {
-color: #646464
-
-}
-
-.profile-container,
-.nav-bar {
-font-size: 1em;
-display: block;
-padding: 10px 15px;
-
-}
-
-/* === media queries === */
-@media screen and (min-width: 768px){
-
-.main-header,
-.main-nav,
-.row,
-.footer{
-display: flex;
-
-}
-
-.main-header {
-flex-direction: column;
-align-items: center;
-
-}
-
-.image{
-max-width: 100%;
+color: #52483f
 
 }
 
 .profile-container {
-display: flex;
-flex-direction: row-reverse;
-color: #000;
-background-color: pink;
-padding: 3.5em;
-margin-bottom: 48px;
-
-}
-
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%
+    
+    
 }
 
 
+/* font-family: 'Raleway', sans-serif; */
 
-@media screen and (min-width: 1024px){
-    .header,
+
+
+
+/* === media queries === */
+
+@media screen and (min-width: 768px){
+
+    .nav-bar,
+    .nav,
+    .portfolio,
+    .footer,
+    .profile-container {
+        display: flex;
+
+    }
+
     .nav-bar {
-background: #fafafa;
+        flex-direction: column;
+        
 
     }
 
-    .header,
-    .profile-container, {
-flex-direction: row;
+  
 
-    }
+
 
     .profile-container {
-
-        margin-right: auto;
-    }
-
-    .nav-bar {
-margin-top: 0;
-align-self: center;
+        flex-direction: row;
+        flex-basis: 50%;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
 
     }
 
-    .nav-bar a {
-        color: pink;
+
+   
+
+    .profile-pic {
+        max-width: 50%;
 
     }
 
-    .nav li {
-
-        margin-left: .60em;
-        margin-right: .60em;
-    }
 }
+
+
+
+@media (min-width: 1024px) {
+    
+    .nav-bar{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+       
+    }
+   
+    
+   
+
+
+  
+    .profile-container div {
+        flex-basis: 35%;
+      }
+}
+
 
