--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@
 /* === MAIN CONTENT ===*/
 
 * {
-    box-sizing: border-box;
+        box-sizing: border-box;
     
     }
     
     html{
-    font-size: 1.25em;
+        font-size: 1em;
+        font-family: 'Raleway', sans-serif;
     
     
     }
@@ -15,6 +16,8 @@
     /* === Navigation === */
     
     .nav-bar {
+        display: flex;
+        flex-direction: column;
         text-align: center;
         align-items: center;
         
@@ -26,10 +29,13 @@
         display: block;
         text-decoration: none;
         color: black;
-        font-size: 1.2em;
-        font-weight: 300;
+        font-size: 1em;
+        font-weight: bold;
         text-align: center;
-        padding: 1em;
+       padding: .5em;
+        justify-content: space-between;
+        
+        
             
     }
         
@@ -40,78 +46,128 @@
         
     ul {
         list-style: none;
-    
-    }
+        padding: 0;
+        margin: 0;
         
+    }
         
     li {
-        
         text-align: center;
-        background-color: white;
-        
+       
+    
     }
+
+    header {
+        background-color: white;
+    
+
+    }
+
+     
+
         
     /*==Body Content==*/
     
     
     img {
-    margin: 0 auto;
-    max-width: 90%;
+        margin: 0 auto;
+        max-width: 90%;
     
     }
     
     body {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    min-height: 100vh;
-    background-color:whitesmoke;
-    font-family: 'Raleway', sans-serif;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        min-height: 100vh;
+        
+        background-color: whitesmoke;
     
     }
+
     
-    a {
-    text-decoration: none;
-    text-transform: uppercase;
-    color: black;
-    
-    }
     
     h1,
     h2,
-    h3 {
-    text-align: center;
-    margin: 0%;
+    h3,
+    h4 {
+        text-align: center;
+       padding: o;
     
     }
     
-    
-    
-    
-    p {
-    font-size: 1em;
-    margin-bottom: 2em;
-    padding: 5px;
-    text-align: center;
-    
-    }
-    
-    
-    
-    h2,
-    h3 {
-    color: #52483f
-    
-    }
+   p {
+    padding: none;
+
+   }
+
+
+  
     
     .profile-container {
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 50px;
+       margin: 0 auto;
+    
         
          
     }
+    .title {
+        padding-bottom: 25px;
+        text-transform: uppercase;
+        font-size: 2rem;
 
+    }
+
+    .contact {
+        margin: auto;
+        padding: none;
+        
+
+    }
+
+
+ /*==footer==*/
+ 
+ footer {
+       flex-direction: column;
+        align-items: center;
+        margin-top: auto;
+        background-color: white;
+ }
+
+
+    .footer-bar{
+        align-items: center;
+      background-color: whitesmoke;
+
+    }
+
+    .foot-nav  a{
+        display: block;
+        text-decoration: none;
+        color: black;
+        font-size: 1em;
+        text-align: center;
+        justify-content: space-between;
+    
+    
+    }
+
+    li .back {
+      align-items: center;
+    }
+
+    
+    .foot-nav a:hover {
+        color: pink
+
+    
+}   
+
+
+.hide {
+    display: none;
+
+}
     
     
     /* font-family: 'Raleway', sans-serif; */
@@ -126,9 +182,10 @@
         .nav-bar,
         .nav,
         .portfolio,
-        .footer,
         .profile-container,
-        .footer-bar {
+        .contact,
+        .footer-bar,
+        .foot-nav {
             display: flex;
     
         }
@@ -139,7 +196,10 @@
     
         }
 
-       
+        ul {
+            flex-direction: row;
+        }
+
       
         .profile-container {
             flex-direction: row-reverse;
@@ -159,16 +219,31 @@
 
         }
 
-    
-    
-    
        
         .profile-pic {
             max-width: 100%;
     
         }
 
-       
+        .contact {
+            flex-direction: column;
+        }
+
+
+
+        .footer-bar{
+            justify-content: space-between;
+       }
+
+        .hide {
+            display: contents;
+
+        }
+
+        .back {
+            display: none;
+
+        }
     
     }
     
@@ -194,15 +269,28 @@
 
         }
 
-        .footer{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
+       .footer-bar {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+       }
+       
+       .hide {
+        display: contents;
+
         }
-    
-          
-    
-    
+
+        .back {
+
+            display: none;
+         }   
+
+         ul{
+            justify-content: space-between;
+
+         }
+        
     
     }
 
