--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@
     
     .profile-container {
        margin: 0 auto;
-    
+    padding-top: 50px;
         
          
     }
@@ -187,6 +187,7 @@
         .footer-bar,
         .foot-nav {
             display: flex;
+            align-items: center;
     
         }
     
@@ -206,6 +207,7 @@
             flex-basis: 100%;
             justify-content: center;
             width: 90%
+            
             
         }
 
