--- a/styles.css
+++ b/styles.css
@@ -25,14 +25,14 @@
     }
         
     
-    .nav  a{
+    a{
         display: block;
         text-decoration: none;
         color: black;
         font-size: 1em;
         font-weight: bold;
         text-align: center;
-       padding: .5em;
+        padding: .5em;
         justify-content: space-between;
         
         
@@ -46,7 +46,7 @@
         
     ul {
         list-style: none;
-        padding: 0;
+      padding: 0;
         margin: 0;
         
     }
@@ -54,7 +54,6 @@
     li {
         text-align: center;
        
-    
     }
 
     header {
@@ -63,9 +62,7 @@
 
     }
 
-     
-
-        
+         
     /*==Body Content==*/
     
     
@@ -80,7 +77,6 @@
         flex-direction: column;
         text-align: center;
         min-height: 100vh;
-        
         background-color: whitesmoke;
     
     }
@@ -92,26 +88,22 @@
     h3,
     h4 {
         text-align: center;
-       padding: o;
+        padding: 0px;
+        margin: 20px;
     
     }
-    
-   p {
-    padding: none;
-
-   }
 
 
-  
-    
+
     .profile-container {
        margin: 0 auto;
-    padding-top: 50px;
+        padding-top: 50px;
         
-         
     }
+
+
     .title {
-        padding-bottom: 25px;
+        
         text-transform: uppercase;
         font-size: 2rem;
 
@@ -119,8 +111,11 @@
 
     .contact {
         margin: auto;
-        padding: none;
-        
+    
+    }
+
+    address {
+        margin: 15px;
 
     }
 
@@ -131,43 +126,33 @@
        flex-direction: column;
         align-items: center;
         margin-top: auto;
-        background-color: white;
+        
  }
 
 
     .footer-bar{
-        align-items: center;
-      background-color: whitesmoke;
+       background-color: white;
 
     }
 
     .foot-nav  a{
-        display: block;
         text-decoration: none;
         color: black;
         font-size: 1em;
-        text-align: center;
-        justify-content: space-between;
-    
-    
-    }
-
-    li .back {
-      align-items: center;
+       
     }
 
     
     .foot-nav a:hover {
         color: pink
 
+    }   
+
+
+    .hide {
+        display: none;
     
-}   
-
-
-.hide {
-    display: none;
-
-}
+    }
     
     
     /* font-family: 'Raleway', sans-serif; */
@@ -194,13 +179,14 @@
         .nav-bar{
             flex-direction: column;
             
-    
         }
 
         ul {
             flex-direction: row;
+            
         }
 
+     
       
         .profile-container {
             flex-direction: row-reverse;
@@ -239,6 +225,7 @@
 
         .hide {
             display: contents;
+            justify-content: space-between;
 
         }
 
@@ -274,9 +261,10 @@
        .footer-bar {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
 
        }
+
+       
        
        .hide {
         display: contents;
